# frontier-takehome

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  demo_llm_fallback.py  docker-compose.yml  plan.md  pyproject.toml
.claude/: settings.json  settings.local.json
config/: crawler.yaml  selectors.yaml
data/samples/: products.csv  products.jsonl  products_all.csv  products_gloves.csv  products_grouped.json  products_sutures_surgical.csv  run-report.json  run-report.md  specifications.csv  specifications.jsonl
src/safco_agent/: __init__.py  cli.py  orchestrator.py  schema.py  settings.py  spec_parser.py
src/safco_agent/agents/: classifier.py  discovery.py  extractor.py  llm_fallback.py  navigator.py  validator.py
src/safco_agent/http/: browser.py  client.py
src/safco_agent/observability/: debug_bundle.py  logging.py  report.py
src/safco_agent/storage/: exporters.py  sqlite.py
tests/: test_classifier.py  test_exporters.py  test_extractor.py  test_storage.py  test_validator.py
tests/fixtures/: REGEN.md  product_alasta-pro.html  product_aquasoft.html  product_clearance-item.html  product_lavender-nitrile.html
